crates/analyzer/tests/snapshots/errors__call_wrong_return_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `__call__` function has incorrect return type
  ┌─ compile_errors/call_wrong_return_type.fe:2:26
  │
2 │     pub fn __call__() -> u64 {
  │                          ^^^ return type should be `()`
  │
  = Hint: Remove the return type specification.
  = Example: `pub fn __call__():`

error: expected function to return `()` but was `u256`
  ┌─ compile_errors/call_wrong_return_type.fe:3:9
  │
3 │         return 10
  │         ^^^^^^^^^


